# PAT.Personal_Assistant_Twin

./: .gitignore  AGENTS.md  HOWTO.md  TASK_TRACKER.md  docker-compose.yml  setup.sh  shared-docs  tools.json
backend/: .env.enterprise  .env.example  .gitignore  API_README.md  BACKEND_TODO.md  CHANGELOG.md  CHANGES.md  FRONTEND_API_REFERENCE.md  FUTURE_ENHANCEMENTS.md  HOWTO.md  INFRASTRUCTURE.md  PAT_CORE_IMPLEMENTATION_STATUS.md  PHASE_3_ENHANCEMENTS.md  README.md  SYSTEM_IMPROVEMENTS.md  USAGE_GUIDE.md  benchmark_performance.py  cleaned_chat.txt  dev_server.sh  docker-compose.enterprise.yml  docker-compose.yml  main.py  mic_requirements.txt  pat_demo.py  pat_out.txt  pyproject.toml  raw_chat_export.txt  requirements.txt  startup.sh  test.json  test_microphone.py
backend/.claude/: settings.local.json
backend/.scripts/: init.sql  init_enterprise.sql
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  health.py  items.py
backend/app/repositories/: __init__.py  items.py
backend/docker/prometheus/: prometheus.yml
backend/docs/: ARCHITECTURE.md  BACKEND_REPOSITORY_UPDATES.md  CHANGES.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES_SUMMARY.md  EMAIL_SERVICE_API.md  ENTERPRISE_GUIDE.md  FRONTEND_API_REFERENCE.md  JOB_SEARCH_SETUP.md  LAUNCHAGENT_GUIDE.md  MASTER_DOCUMENTATION_INDEX.md  README.md  TASK_SERVICE_API.md  new_capabilities.md
backend/docs/book/: Code_and_Courage_Full_Draft.md  Code_and_Courage_Manuscript.md
backend/ios/: AppDelegate.swift  ContentView.swift  PATApp.swift  ViewController.swift
backend/ios/Base.lproj/: Main.storyboard
backend/ios/Helpers/: Constants.swift  Date+Extensions.swift  NetworkManager.swift  NetworkModels.swift  String+Extensions.swift  UIColor+Extensions.swift
backend/ios/Models/: CartItem.swift  Order.swift  Product.swift  User.swift
backend/ios/Protocols/: Networking.swift  RepositoryProtocol.swift  ViewModelProtocol.swift
backend/ios/SceneDelegate/: SceneDelegate.swift
backend/ios/Supporting Files/: Info.plist
backend/ios/Tests/: PATTests.swift
backend/ios/UITests/: PATUITests.swift
backend/ios/ViewModels/: BaseViewModel.swift  CartViewModel.swift  OrderViewModel.swift  ProductViewModel.swift  UserViewModel.swift
backend/ios/Views/: AppView.swift  CartDetailView.swift  CartListCell.swift  CartView.swift  NavigationView.swift  OrderDetailView.swift  OrderListCell.swift  OrderListView.swift  ProductDetailView.swift  ProductListCell.swift  ProductListView.swift  TabBarView.swift  UserDetailView.swift  UserListCell.swift  UserListView.swift
backend/macOS/PATManager/: README.md  (+3 more)
backend/mcp/: validator.py
backend/scripts/: audio_capture.py  cleanQA.py  ingest_apple_notes.py  live_listener.py  service_launcher.py  start_sync_workers.sh  system_check.py  test_pat_api.sh
backend/services/: __init__.py
backend/src/: main.py  main_pat.py  main_pat_full.py
backend/tests/: README.md  mic_requirements_alt.txt  pat_quick_test.py  simple_audio_test.py  test_email_endpoints.py  test_health.py  test_items.py  test_job_search.py  test_langchain.py  test_microphone_alt.py  test_phase3_features.py  test_task_endpoints.py
pat-app/backend/: .env.example  Dockerfile  pyproject.toml
(+313 files in other folders)
