[tool.poetry]
name = "pat-backend"
version = "0.1.0"
description = "Personal Assistant Toolkit - Backend API"
authors = ["PAT Team <team@pat.dev>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.11.7"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"
httpx = "^0.28.1"
numpy = "^2.3.2"
psycopg2 = "^2.9.11"
redis = "^7.1.0"
PyPDF2 = "^3.0.1"
minio = "^7.2.20"
setproctitle = "^1.3.2"
psutil = "^5.9.6"
prometheus-fastapi-instrumentator = "^6.1.0"

# Job Search Dependencies
APScheduler = "^3.10.4"
aiosmtplib = "^3.0.1"
spacy = "^3.7.5"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.30"

# Development Dependencies
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.0"
ruff = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.0"
ruff = "^0.6.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.extras]
dev = ["black", "isort", "mypy", "ruff", "pytest", "pytest-asyncio", "pytest-cov"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Request"]

[tool.ruff.lint.flake8-simplify]
fixable = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "api: marks tests as API tests",
]